--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
     "module": "esnext",                           /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */
     "moduleResolution": "node",
     "lib": ["dom", "esnext"],                                   /* Specify library files to be included in the compilation. */
+    "baseUrl": ".",
     "outDir": "./dist",                              /* Redirect output structure to the directory. */
-    "rootDir": "./",                             /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     "typeRoots": [
       "./node_modules/@types/", 
       "./types"
@@ -28,7 +28,8 @@
   },
 
   "include": [
-    "src/**/*.ts"
+    "src/**/*.ts",
+    "types/**/*.d.ts"
   ],
   
   "exclude": ["node_modules", "dist", "**/*.js"]
