--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
       "./types"
     ],
     "strict": true,                                 /* Enable all strict type-checking options. */
+    "strictBindCallApply": false,                   /* 禁用函数对象的bind,call和apply方法是强类型的，并进行严格检测。 */
 
     "allowSyntheticDefaultImports": true,        /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
     "esModuleInterop": true,                        /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
