--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "build": "npx tsc"
+    "build": "npx tsc --target es6"
   },
   "dependencies": {
     "crypto-js": "^4.0.0",
